@startuml

'The field types are from <https://www.sqlite.org/datatype3.html>.

entity "Recipe" as recipe {
  id: INTEGER
  --
  name: TEXT
}

entity "Recipe Step" as recipe_step {
  id: INTEGER
  --
  order: INTEGER
  description: TEXT
  image: TEXT
}
recipe_step }o--|| "recipe_id" recipe

entity "Recipe Ingredient" as recipe_ingredient {
  id: INTEGER
  --
  order: INTEGER
  quantity: REAL
  unit: TEXT
  quality: TEXT
}
recipe_ingredient }o--|| "step_id" recipe_step

entity "Recipe Ingredient Draft" as recipe_ingredient_draft {
  id: INTEGER
  --
  order: INTEGER
  text: TEXT
}
recipe_ingredient_draft }o--|| "step_id" recipe_step

entity "Ingredient" as ingredient {
  id: INTEGER
  --
  name: TEXT
}
ingredient "ingredient_id" ||--o{ recipe_ingredient

entity "Recipe File" as recipe_file {
  id: INTEGER
  --
  name: TEXT
  order: INTEGER
  mime: TEXT
  uri: TEXT
}
recipe_file }o--|| "step_id" recipe_step

@enduml